--- a/usr.sbin/rtsold/rtsold.8
+++ b/usr.sbin/rtsold/rtsold.8
@@ -163,7 +163,7 @@ The options are as follows:
 .It Fl a
 Autoprobe outgoing interfaces.
 .Nm
-will try to find any non-loopback, non-point-to-point, IPv6-capable interfaces
+will try to find any non-loopback, IPv6-capable interfaces
 and send router solicitation messages on all of them.
 .It Fl d
 Enable debugging.
